# kiesel-fork

./: .gitattributes  .gitmodules  LICENSE  README.md  build.zig  build.zig.zon  test.js
.forgejo/workflows/: build.yml  ci.yml  docs.yml  lint.yml  test.yml
.github/workflows/: lint.yml  test.yml
docs/: fuzzing.md  kiesel.1  running-test262.md  valgrind.md
patches/: libregexp.patch
pkg/libregexp/: build.zig  build.zig.zon
pkg/zement/: Cargo.toml  build.zig  build.zig.zon
pkg/zement/src/: lib.rs
runtime/: LICENSE  README.md  build.zig  build.zig.zon
runtime/src/: blob.zig  console.zig  crypto.zig  fetch.zig  loop.zig  navigator.zig  performance.zig  queue_microtask.zig  root.zig  tag.zig  text_decoder.zig  text_encoder.zig  timers.zig
runtime/src/fetch/: response.zig
runtime/src/webidl/: sequence.zig
src/: builtins.zig  cli.zig  execution.zig  gc.zig  kiesel.zig  language.zig  main.zig  pretty_printing.zig  timer_cli_minimal.zig  timer_example_cli.zig  types.zig  uefi.zig  utils.zig
src/builtins/: aggregate_error.zig  arguments.zig  array.zig  array_buffer.zig  array_fast_paths.zig  array_iterator.zig  async_from_sync_iterator.zig  async_function.zig  async_generator.zig  async_generator_function.zig  async_iterator.zig  atomics.zig  big_int.zig  boolean.zig  bound_function.zig  builtin_function.zig  data_view.zig  date.zig  ecmascript_function.zig  error.zig  eval.zig  finalization_registry.zig  for_in_iterator.zig  function.zig  generator.zig  generator_function.zig  global.zig  immutable_prototype.zig  intl.zig  iterator.zig  iterator_helper.zig  json.zig  map.zig  map_iterator.zig  math.zig  module_namespace.zig  number.zig  object.zig  ordinary.zig  promise.zig  (+17 more)
src/builtins/intl/: abstract_operations.zig  collator.zig  date_time_format.zig  display_names.zig  duration_format.zig  list_format.zig  locale.zig  plural_rules.zig  segment_iterator.zig  segmenter.zig  segments.zig
src/builtins/temporal/: duration.zig  instant.zig  now.zig  plain_date.zig  plain_date_time.zig  plain_month_day.zig  plain_time.zig  plain_year_month.zig  zoned_date_time.zig
src/c/: libgc.zig  libregexp.zig  temporal_rs.zig
src/execution/: Agent.zig  ExecutionContext.zig  HostHooks.zig  Job.zig  JobCallback.zig  Realm.zig  default_host_hooks.zig  environments.zig  job.zig
src/execution/Agent/: Exception.zig  Platform.zig  TimerManager.zig  WellKnownSymbols.zig
src/execution/Realm/: Intrinsics.zig  Shapes.zig
src/execution/environments/: DeclarativeEnvironment.zig  FunctionEnvironment.zig  GlobalEnvironment.zig  ModuleEnvironment.zig  ObjectEnvironment.zig  PrivateEnvironment.zig
src/gc/: GcAllocator.zig
src/language/: Parser.zig  Script.zig  SourceTextModule.zig  SyntheticModule.zig  ast.zig  ast_printing.zig  bytecode.zig  literals.zig  module.zig  runtime.zig  tokenizer.zig
src/language/bytecode/: Executable.zig  Vm.zig  codegen.zig  instructions.zig
src/types/: language.zig  spec.zig
src/types/language/: BigInt.zig  Object.zig  String.zig  Symbol.zig  Value.zig  number.zig  string.zig  value.zig
src/types/spec/: Arguments.zig  ClassFieldDefinition.zig  ClassStaticBlockDefinition.zig  Completion.zig  PrivateMethodDefinition.zig  PrivateName.zig  PropertyDescriptor.zig  Reference.zig  data_block.zig  iterator.zig  private_element.zig
src/utils/: float16.zig
tools/fuzzilli/: coverage.c  coverage.zig  fuzzilli.patch  main.zig
tools/test262/: generate-results.sh  results.json
tools/valgrind/: kiesel.supp
(+15 files in other folders)
