[package]
name = "zement"
version = "0.1.0"
edition = "2024"

# This is pinned to the same version as the icu4x dependency in icu4zig, which provides the C
# headers for Zig.
[dependencies.icu_capi]
version = "2.1.0"
default-features = false
features = ["compiled_data", "default_components", "experimental", "std"]

# This is pinned to the same version as the temporal_rs dependency in the top-level build.zig.zon,
# which provides the C headers for Zig.
[dependencies.temporal_capi]
version = "0.1.2"
default-features = false
features = ["compiled_data"]

# Not actually used directly, but we need to specify it as a dependency to enable features not
# exposed via the temporal_capi crate.
[dependencies.temporal_rs]
version = "*"
default-features = false
features = ["float64_representable_durations"]

[features]
intl = []
temporal = []

[lib]
crate-type = ["staticlib"]

[profile.release]
strip = true
lto = true
panic = "abort"
